--- a/asm/cluster/nodepool.yaml
+++ b/asm/cluster/nodepool.yaml
@@ -1,31 +1,38 @@
-# Copyright 2020 Google LLC
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 apiVersion: container.cnrm.cloud.google.com/v1alpha2
 kind: ContainerNodePool
 metadata:
-  clusterName: "PROJECT_ID/us-central1-c/asm-cluster" # {"type":"string","x-kustomize":{"partialSetters":[{"name":"gcloud.core.project","value":"PROJECT_ID"},{"name":"cluster-name","value":"asm-cluster"},{"name":"gcloud.compute.zone","value":"us-central1-c"}]}}
+  clusterName: "[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.full-cluster-name"}
   name: default-pool
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
 spec:
   initialNodeCount: 2
   autoscaling:
     minNodeCount: 2
-    maxNodeCount: 4 # {"type":"integer","x-kustomize":{"setter":{"name":"max-nodes","value":"4"}}}
+    maxNodeCount: 4 # {"$ref":"#/definitions/io.k8s.cli.setters.replicas"}
   nodeConfig:
-    machineType: e2-standard-4
-    workloadMetadataConfig:
-      nodeMetadata: GKE_METADATA_SERVER
+    diskSizeGb: 100
+    diskType: pd-standard
+    machineType: n1-standard-4
+    preemptible: false
+    oauthScopes:
+    - "https://www.googleapis.com/auth/cloud-platform"
+    - "https://www.googleapis.com/auth/compute"
+    - "https://www.googleapis.com/auth/devstorage.read_only"
+    - "https://www.googleapis.com/auth/logging.write"
+    - "https://www.googleapis.com/auth/monitoring"
+    - "https://www.googleapis.com/auth/service.management.readonly"
+    - "https://www.googleapis.com/auth/servicecontrol"
+    - "https://www.googleapis.com/auth/trace.append"
+    #guestAccelerator:
+    #  - type: "nvidia-tesla-k80"
+    #    count: 1
+    metadata:
+      disable-legacy-endpoints: "true"
+    serviceAccount: anthos-svc-account@[PROJECT_ID].iam.gserviceaccount.com # {"$ref":"#/definitions/io.k8s.cli.substitutions.anthos-svc-account"}
+    #    workloadMetadataConfig:
+    #      nodeMetadata: EXPOSE
+  management:
+    autoRepair: true
+    autoUpgrade: true
   clusterRef:
-    name: "asm-cluster" # {"type":"string","x-kustomize":{"setter":{"name":"cluster-name","value":"asm-cluster"}}}
+    name: asm-free-trial # {"$ref":"#/definitions/io.k8s.cli.setters.cluster-name"}
