--- a/asm/project/enable-services.yaml
+++ b/asm/project/enable-services.yaml
@@ -1,32 +1,26 @@
-# Copyright 2020 Google LLC
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 # Stackdriver
 apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
-  name: stackdriver
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  name: monitoring
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
 spec:
-  service: stackdriver.googleapis.com
+  service: monitoring.googleapis.com
+---
+apiVersion: cnrm.cloud.google.com/v1alpha1
+kind: CloudService
+metadata:
+  name: stackdriver
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
+spec:
+  service: monitoring.googleapis.com
 ---
 # GCE
 apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: compute
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
 spec:
   service: compute.googleapis.com
 ---
@@ -35,7 +29,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: gke
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
 spec:
   service: container.googleapis.com
 ---
@@ -44,7 +38,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: iamcredentials
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
 spec:
   service: iamcredentials.googleapis.com
 ---
@@ -53,7 +47,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: meshca
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
 spec:
   service: meshca.googleapis.com
 ---
@@ -62,7 +56,7 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: meshtelemetry
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
 spec:
   service: meshtelemetry.googleapis.com
 ---
@@ -71,15 +65,24 @@ apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: meshconfig
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
 spec:
   service: meshconfig.googleapis.com
 ---
-# Anthos
+# Traffic Director
+apiVersion: cnrm.cloud.google.com/v1alpha1
+kind: CloudService
+metadata:
+  name: trafficdirector
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
+spec:
+  service: trafficdirector.googleapis.com
+---
+# Traffic Director
 apiVersion: cnrm.cloud.google.com/v1alpha1
 kind: CloudService
 metadata:
   name: anthos
-  namespace: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
 spec:
   service: anthos.googleapis.com
