--- a/scripts/asm-installer/cloudbuild.yaml
+++ b/scripts/asm-installer/cloudbuild.yaml
@@ -1,14 +1,17 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
+  dir: 'scripts/asm-installer'
   id: 'build-tester-image'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}', '.']
   waitFor: ['-']
 - name: 'gcr.io/cloud-builders/docker'
+  dir: 'scripts/asm-installer'
   id: 'publish-tester-image'
   args: ['push', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}']
   waitFor: ['build-tester-image']
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
   id: 'lint-with-shellcheck'
   entrypoint: 'shellcheck'
   args:
@@ -16,6 +19,7 @@ steps:
   waitFor:
   - 'publish-tester-image'
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
   id: 'check-posh-compatibility'
   entrypoint: 'posh'
   args: ['-n', '${_SCRIPT_NAME}']
@@ -23,6 +27,7 @@ steps:
   - 'publish-tester-image'
 
 - name: 'gcr.io/cloud-builders/gcloud'
+  dir: 'scripts/asm-installer'
   id: 'fetch-secrets'
   entrypoint: '/bin/bash'
   args:
@@ -39,6 +44,7 @@ steps:
   - 'check-posh-compatibility'
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
   id: 'clean-up-old-clusters'
   entrypoint: '/bin/bash'
   args:
@@ -72,6 +78,7 @@ steps:
   - 'fetch-secrets'
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
   id: 'run-cli-tests'
   entrypoint: '/bin/bash'
   args:
@@ -86,6 +93,7 @@ steps:
   timeout: 2400s # 40 mins
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
   id: 'run-basic-suite'
   entrypoint: '/bin/bash'
   args:
@@ -103,6 +111,7 @@ steps:
   timeout: 2400s # 40 mins
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
   id: 'run-migration-suite-meshca'
   entrypoint: '/bin/bash'
   args:
@@ -120,6 +129,7 @@ steps:
   timeout: 2400s # 40 mins
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
   id: 'run-migration-suite-citadel'
   entrypoint: '/bin/bash'
   args:
@@ -137,6 +147,7 @@ steps:
   timeout: 2400s # 40 mins
 
 - name: 'gcr.io/cloud-builders/gcloud'
+  dir: 'scripts/asm-installer'
   id: 'publish-scripts'
   entrypoint: '/bin/bash'
   args:
